@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed PHP/MapScript ms_iogetstdoutbufferbytes() always returning 0 bytes written (#3041)
+
 - MapScript resultsGetShape() method fails with a OracleSpatial layer (#3462)
 
 - PHP/MapScript circular references between objects (#3405) 
